# action-ask-bing

./: .gitignore  Cargo.toml  app.py  question.json  question.txt  request.json.encrypted  requirements.txt  temp.json
.github/workflows/: release.yml  run.yml
src/: main.rs
