[package]
name = "action-ask-bing"
version = "1.0.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
edge-gpt = "0.3.3"
ezio = "0.1.2"
hex = "0.4.3"
libaes = "0.6.4"
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
redis = { version = "0.23.0", features = ["tokio-comp", "tokio-native-tls-comp"] }
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread", "time"] }
isahc = { version = "1.7.2", features = ["json"] }
regex = "1.8.1"
